aule/generated/kotlinParser.py
# Generated from kotlinParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class kotlinParser ( Parser ):

    grammarFileName = "kotlinParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'", "'{'", "'}'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'package'", "'import'", 
                     "'.'", "'*'", "','", "'<'", "'<='", "'>'", "'>='", 
                     "'='", "'=='", "'==='", "'!='", "':'", "'('", "')'", 
                     "'?'", "'!!.'", "'||'", "'&&'", "'?:'", "'...'", "'..'", 
                     "'::'", "'true'", "'false'", "'null'", "'->'", "'/'", 
                     "'%'", "'+'", "'-'", "'in'", "'!in'", "'is'", "'!is'", 
                     "'as'", "'as?'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'--'", "'++'", "'!!'", "'!'", "'['", "']'", "'val'", 
                     "'var'", "'by'", "'dynamic'", "'where'", "'get'", "'set'", 
                     "'abstract'", "'open'", "'final'", "'override'", "'enum'", 
                     "'annotation'", "'data'", "'private'", "'protected'", 
                     "'public'", "'internal'", "'out'", "'@'", "'file'", 
                     "'field'", "'property'", "'param'", "'sparam'", "'throw'", 
                     "'continue'", "'return'", "'break'", "'constructor'", 
                     "'this'", "'super'", "'class'", "'interface'", "'object'", 
                     "'companion'", "'fun'", "'init'", "'if'", "'else'", 
                     "'when'", "'while'", "'for'", "'do'", "'try'", "'catch'", 
                     "'finally'", "'$'" ]

    symbolicNames = [ "<INVALID>", "MULTILINE_COMMENT", "SINGLELINE_COMMENT", 
                      "WHITESPACE", "IntegerLiteral", "SEMI", "OPEN_BLOCK", 
                      "CLOSE_BLOCK", "HexadecimalLiteral", "CharacterLiteral", 
                      "TRIPLE_QUOTE", "SINGLE_QUOTE", "PACKAGE", "IMPORT", 
                      "DOT", "STAR", "COMMA", "LT", "LTE", "GT", "GTE", 
                      "EQ", "EQ_EQ", "EQ_EQ_EQ", "NEQ", "COLON", "BRACE_OPEN", 
                      "BRACE_CLOSE", "Q", "DA", "DISJ", "CONJ", "ELVIS", 
                      "LONG_RANGE", "RANGE", "REFERENCE", "TRUE", "FALSE", 
                      "NULL", "OP_ASTERISK", "OP_DIV", "OP_MOD", "OP_PLUS", 
                      "OP_MUNUS", "OP_IN", "OP_NOT_IN", "OP_IS", "OP_NOT_IS", 
                      "OP_AS", "OP_AS_SAFE", "OP_PLUS_ASSIGN", "OP_MINUS_ASSIGN", 
                      "OP_MULT_ASSIGN", "OP_DIV_ASSIGN", "OP_MOD_ASSIGN", 
                      "OP_DECREMENT", "OP_INCREMENT", "OP_NULL_ASSERT", 
                      "OP_NOT", "SQ_OPEN", "SQ_CLOSE", "KEYWORD_val", "KEYWORD_var", 
                      "KEYWORD_by", "KEYWORD_dynamic", "KEYWORD_where", 
                      "GET", "SET", "HierarchyModifier_abstract", "HierarchyModifier_open", 
                      "HierarchyModifier_final", "HierarchyModifier_override", 
                      "ClassModifier_enum", "ClassModifier_annotation", 
                      "ClassModifier_data", "AccessModifier_private", "AccessModifier_protected", 
                      "AccessModifier_public", "AccessModifier_internal", 
                      "VarianceAnnotation_out", "DOG", "AnnotationUseSiteTarget_file", 
                      "AnnotationUseSiteTarget_field", "AnnotationUseSiteTarget_property", 
                      "AnnotationUseSiteTarget_param", "AnnotationUseSiteTarget_sparam", 
                      "Jump_throw", "Jump_continue", "Jump_return", "Jump_break", 
                      "KEYWORD_constructor", "ConstructorDelegationCall_this", 
                      "ConstructorDelegationCall_super", "Declaration_class", 
                      "Declaration_interface", "Declaration_object", "Declaration_companion", 
                      "Declaration_fun", "Declaration_init", "CF_if", "CF_else", 
                      "CF_when", "CF_while", "CF_for", "CF_do", "CF_try", 
                      "CF_catch", "CF_FINALLY", "BAX", "SimpleName", "SINLE_QUOTE_WHITESPACE", 
                      "SINGLE_TEXT", "SINLE_QUOTE_CLOSE", "SINLE_QUOTE_ESCAPED_CHAR", 
                      "SINLE_QUOTE_EXPRESSION_START", "SINGLE_QUOTE_REF", 
                      "MULTILINE_QUOTE_TEXT", "MULTILINE_QUOTE_CLOSE", "MULTILINE_QUOTES", 
                      "MULTILINE_QUOTE_EXPRESSION_START", "MULTILINE_QUOTE_REF" ]

    RULE_root = 0
    RULE_preamble = 1
    RULE_packageHeader = 2
    RULE_importHeader = 3
    RULE_toplevelObject = 4
    RULE_memberDeclaration = 5
    RULE_optionalProjection = 6
    RULE_typeParameters = 7
    RULE_typeParameter = 8
    RULE_typeArguments = 9
    RULE_typeConstraints = 10
    RULE_typeConstraint = 11
    RULE_type_ = 12
    RULE_typeDescriptor = 13
    RULE_userType = 14
    RULE_simpleUserType_typeParam = 15
    RULE_simpleUserType = 16
    RULE_variableDeclarationEntry = 17
    RULE_functionType_paramOrType = 18
    RULE_extensionFunctionTypeNoReceiver = 19
    RULE_functionTypeNoReceiver = 20
    RULE_multipleVariableDeclarations = 21
    RULE_propertyDeclaration = 22
    RULE_getter = 23
    RULE_setter = 24
    RULE_modifiers = 25
    RULE_modifier = 26
    RULE_modifierKeyword = 27
    RULE_hierarchyModifier = 28
    RULE_classModifier = 29
    RULE_accessModifier = 30
    RULE_varianceAnnotation = 31
    RULE_annotations = 32
    RULE_annotation = 33
    RULE_annotationUseSiteTarget = 34
    RULE_valueArgument = 35
    RULE_valueArguments = 36
    RULE_unescapedAnnotation = 37
    RULE_jump = 38
    RULE_labelReference = 39
    RULE_labelDefinition = 40
    RULE_parameter = 41
    RULE_functionParameter = 42
    RULE_primaryConstructor = 43
    RULE_secondaryConstructor = 44
    RULE_constructorDelegationCall = 45
    RULE_callSuffix = 46
    RULE_constructorInvocation = 47
    RULE_explicitDelegation = 48
    RULE_delegationSpecifier = 49
    RULE_classDeclaration = 50
    RULE_supertypesSpecifiers = 51
    RULE_objectDeclaration = 52
    RULE_companionObject = 53
    RULE_classBody = 54
    RULE_members = 55
    RULE_valueParameters = 56
    RULE_functionDeclaration = 57
    RULE_statements = 58
    RULE_functionBody = 59
    RULE_block = 60
    RULE_anonymousInitializer = 61
    RULE_enumClassBody = 62
    RULE_enumEntries = 63
    RULE_enumEntry = 64
    RULE_ifExpression = 65
    RULE_tryExpression = 66
    RULE_catchBlock = 67
    RULE_finallyBlock = 68
    RULE_loop = 69
    RULE_forLoop = 70
    RULE_whileLoop = 71
    RULE_doWhileLoop = 72
    RULE_expression = 73
    RULE_disjunction = 74
    RULE_conjunction = 75
    RULE_equalityComparison = 76
    RULE_comparison = 77
    RULE_namedInfix = 78
    RULE_elvisExpression = 79
    RULE_infixFunctionCall = 80
    RULE_rangeExpression = 81
    RULE_additiveExpression = 82
    RULE_multiplicativeExpression = 83
    RULE_typeRHS = 84
    RULE_prefixUnaryExpression = 85
    RULE_postfixUnaryExpression = 86
    RULE_callableReference = 87
    RULE_identifier = 88
    RULE_stringLiteral = 89
    RULE_atomicExpression = 90
    RULE_literalConstant = 91
    RULE_declaration = 92
    RULE_statement = 93
    RULE_multiplicativeOperation = 94
    RULE_additiveOperation = 95
    RULE_inOperation = 96
    RULE_typeOperation = 97
    RULE_isOperation = 98
    RULE_comparisonOperation = 99
    RULE_equalityOperation = 100
    RULE_assignmentOperator = 101
    RULE_prefixUnaryOperation = 102
    RULE_postfixUnaryOperation = 103
    RULE_annotatedLambda = 104
    RULE_memberAccessOperation = 105
    RULE_functionLiteral = 106
    RULE_arrayAccess = 107
    RULE_objectLiteral = 108
    RULE_when = 109
    RULE_whenEntry = 110
    RULE_whenCondition = 111

    ruleNames =  [ "root", "preamble", "packageHeader", "importHeader", 
                   "toplevelObject", "memberDeclaration", "optionalProjection", 
                   "typeParameters", "typeParameter", "typeArguments", "typeConstraints", 
                   "typeConstraint", "type_", "typeDescriptor", "userType", 
                   "simpleUserType_typeParam", "simpleUserType", "variableDeclarationEntry", 
                   "functionType_paramOrType", "extensionFunctionTypeNoReceiver", 
                   "functionTypeNoReceiver", "multipleVariableDeclarations", 
                   "propertyDeclaration", "getter", "setter", "modifiers", 
                   "modifier", "modifierKeyword", "hierarchyModifier", "classModifier", 
                   "accessModifier", "varianceAnnotation", "annotations", 
                   "annotation", "annotationUseSiteTarget", "valueArgument", 
                   "valueArguments", "unescapedAnnotation", "jump", "labelReference", 
                   "labelDefinition", "parameter", "functionParameter", 
                   "primaryConstructor", "secondaryConstructor", "constructorDelegationCall", 
                   "callSuffix", "constructorInvocation", "explicitDelegation", 
                   "delegationSpecifier", "classDeclaration", "supertypesSpecifiers", 
                   "objectDeclaration", "companionObject", "classBody", 
                   "members", "valueParameters", "functionDeclaration", 
                   "statements", "functionBody", "block", "anonymousInitializer", 
                   "enumClassBody", "enumEntries", "enumEntry", "ifExpression", 
                   "tryExpression", "catchBlock", "finallyBlock", "loop", 
                   "forLoop", "whileLoop", "doWhileLoop", "expression", 
                   "disjunction", "conjunction", "equalityComparison", "comparison", 
                   "namedInfix", "elvisExpression", "infixFunctionCall", 
                   "rangeExpression", "additiveExpression", "multiplicativeExpression", 
                   "typeRHS", "prefixUnaryExpression", "postfixUnaryExpression", 
                   "callableReference", "identifier", "stringLiteral", "atomicExpression", 
                   "literalConstant", "declaration", "statement", "multiplicativeOperation", 
                   "additiveOperation", "inOperation", "typeOperation", 
                   "isOperation", "comparisonOperation", "equalityOperation", 
                   "assignmentOperator", "prefixUnaryOperation", "postfixUnaryOperation", 
                   "annotatedLambda", "memberAccessOperation", "functionLiteral", 
                   "arrayAccess", "objectLiteral", "when", "whenEntry", 
                   "whenCondition" ]

    EOF = Token.EOF
    MULTILINE_COMMENT=1
    SINGLELINE_COMMENT=2
    WHITESPACE=3
    IntegerLiteral=4
    SEMI=5
    OPEN_BLOCK=6
    CLOSE_BLOCK=7
    HexadecimalLiteral=8
    CharacterLiteral=9
    TRIPLE_QUOTE=10
    SINGLE_QUOTE=11
    PACKAGE=12
    IMPORT=13
    DOT=14
    STAR=15
    COMMA=16
    LT=17
    LTE=18
    GT=19
    GTE=20
    EQ=21
    EQ_EQ=22
    EQ_EQ_EQ=23
    NEQ=24
    COLON=25
    BRACE_OPEN=26
    BRACE_CLOSE=27
    Q=28
    DA=29
    DISJ=30
    CONJ=31
    ELVIS=32
    LONG_RANGE=33
    RANGE=34
    REFERENCE=35
    TRUE=36
    FALSE=37
    NULL=38
    OP_ASTERISK=39
    OP_DIV=40
    OP_MOD=41
    OP_PLUS=42
    OP_MUNUS=43
    OP_IN=44
    OP_NOT_IN=45
    OP_IS=46
    OP_NOT_IS=47
    OP_AS=48
    OP_AS_SAFE=49
    OP_PLUS_ASSIGN=50
    OP_MINUS_ASSIGN=51
    OP_MULT_ASSIGN=52
    OP_DIV_ASSIGN=53
    OP_MOD_ASSIGN=54
    OP_DECREMENT=55
    OP_INCREMENT=56
    OP_NULL_ASSERT=57
    OP_NOT=58
    SQ_OPEN=59
    SQ_CLOSE=60
    KEYWORD_val=61
    KEYWORD_var=62
    KEYWORD_by=63
    KEYWORD_dynamic=64
    KEYWORD_where=65
    GET=66
    SET=67
    HierarchyModifier_abstract=68
    HierarchyModifier_open=69
    HierarchyModifier_final=70
    HierarchyModifier_override=71
    ClassModifier_enum=72
    ClassModifier_annotation=73
    ClassModifier_data=74
    AccessModifier_private=75
    AccessModifier_protected=76
    AccessModifier_public=77
    AccessModifier_internal=78
    VarianceAnnotation_out=79
    DOG=80
    AnnotationUseSiteTarget_file=81
    AnnotationUseSiteTarget_field=82
    AnnotationUseSiteTarget_property=83
    AnnotationUseSiteTarget_param=84
    AnnotationUseSiteTarget_sparam=85
    Jump_throw=86
    Jump_continue=87
    Jump_return=88
    Jump_break=89
    KEYWORD_constructor=90
    ConstructorDelegationCall_this=91
    ConstructorDelegationCall_super=92
    Declaration_class=93
    Declaration_interface=94
    Declaration_object=95
    Declaration_companion=96
    Declaration_fun=97
    Declaration_init=98
    CF_if=99
    CF_else=100
    CF_when=101
    CF_while=102
    CF_for=103
    CF_do=104
    CF_try=105
    CF_catch=106
    CF_FINALLY=107
    BAX=108
    SimpleName=109
    SINLE_QUOTE_WHITESPACE=110
    SINGLE_TEXT=111
    SINLE_QUOTE_CLOSE=112
    SINLE_QUOTE_ESCAPED_CHAR=113
    SINLE_QUOTE_EXPRESSION_START=114
    SINGLE_QUOTE_REF=115
    MULTILINE_QUOTE_TEXT=116
    MULTILINE_QUOTE_CLOSE=117
    MULTILINE_QUOTES=118
    MULTILINE_QUOTE_EXPRESSION_START=119
    MULTILINE_QUOTE_REF=120

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preamble(self):
            return self.getTypedRuleContext(kotlinParser.PreambleContext,0)


        def toplevelObject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kotlinParser.ToplevelObjectContext)
            else:
                return self.getTypedRuleContext(kotlinParser.ToplevelObjectContext,i)


        def getRuleIndex(self):
            return kotlinParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = kotlinParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 224
            self.preamble()
            self.state = 228
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 44)) & ~0x3f) == 0 and ((1 << (_la - 44)) & ((1 << (kotlinParser.OP_IN - 44)) | (1 << (kotlinParser.KEYWORD_val - 44)) | (1 << (kotlinParser.KEYWORD_var - 44)) | (1 << (kotlinParser.HierarchyModifier_abstract - 44)) | (1 << (kotlinParser.HierarchyModifier_open - 44)) | (1 << (kotlinParser.HierarchyModifier_final - 44)) | (1 << (kotlinParser.HierarchyModifier_override - 44)) | (1 << (kotlinParser.ClassModifier_enum - 44)) | (1 << (kotlinParser.ClassModifier_annotation - 44)) | (1 << (kotlinParser.ClassModifier_data - 44)) | (1 << (kotlinParser.AccessModifier_private - 44)) | (1 << (kotlinParser.AccessModifier_protected - 44)) | (1 << (kotlinParser.AccessModifier_public - 44)) | (1 << (kotlinParser.AccessModifier_internal - 44)) | (1 << (kotlinParser.VarianceAnnotation_out - 44)) | (1 << (kotlinParser.DOG - 44)) | (1 << (kotlinParser.Declaration_class - 44)) | (1 << (kotlinParser.Declaration_interface - 44)) | (1 << (kotlinParser.Declaration_object - 44)) | (1 << (kotlinParser.Declaration_fun - 44)))) != 0):
                self.state = 225
                self.toplevelObject()
                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PreambleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageHeader(self):
            return self.getTypedRuleContext(kotlinParser.PackageHeaderContext,0)


        def importHeader(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kotlinParser.ImportHeaderContext)
            else:
                return self.getTypedRuleContext(kotlinParser.ImportHeaderContext,i)


        def getRuleIndex(self):
            return kotlinParser.RULE_preamble

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreamble" ):
                listener.enterPreamble(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreamble" ):
                listener.exitPreamble(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreamble" ):
                return visitor.visitPreamble(self)
            else:
                return visitor.visitChildren(self)




    def preamble(self):

        localctx = kotlinParser.PreambleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preamble)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 232
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==kotlinParser.PACKAGE:
                self.state = 231
                self.packageHeader()


            self.state = 237
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kotlinParser.IMPORT:
                self.state = 234
                self.importHeader()
                self.state = 239
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kotlinParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(kotlinParser.IdentifierContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(kotlinParser.SEMI)
            else:
                return self.getToken(kotlinParser.SEMI, i)

        def getRuleIndex(self):
            return kotlinParser.RULE_packageHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageHeader" ):
                listener.enterPackageHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageHeader" ):
                listener.exitPackageHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageHeader" ):
                return visitor.visitPackageHeader(self)
            else:
                return visitor.visitChildren(self)




    def packageHeader(self):

        localctx = kotlinParser.PackageHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packageHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 240
            self.match(kotlinParser.PACKAGE)
            self.state = 241
            self.identifier()
            self.state = 246
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kotlinParser.DOT:
                self.state = 242
                self.match(kotlinParser.DOT)
                self.state = 243
                self.identifier()
                self.state = 248
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 252
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==kotlinParser.SEMI:
                self.state = 249
                self.match(kotlinParser.SEMI)
                self.state = 254
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(kotlinParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(kotlinParser.IdentifierContext,i)


        def SimpleName(self):
            return self.getToken(kotlinParser.SimpleName, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(kotlinParser.SEMI)
            else:
                return self.getToken(kotlinParser.SEMI, i)

        def getRuleIndex(self):
            return kotlinParser.RULE_importHeader
